[project]
name = "pytorch-baseline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ilya Razenshteyn", email = "ilya.razenshteyn@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "typer>=0.20.0",
]

[project.scripts]
pytorch-baseline = "pytorch_baseline:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "ruff>=0.14.7",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"
lint.select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "S",
    "C4",
    "SIM",
    "TID",
]
lint.ignore = [
    "E501",
]
lint.fixable = ["ALL"]
lint.unfixable = []

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = []
lines-between-types = 1

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.13"
strict = true
